# WebScrapping2026

./: mejoras.md
.claude/: settings.local.json
sivml/: .env.example  .gitignore  pyproject.toml  requirements.txt  scraping.py  sivml.db.bak_pre_dedup_fix  sivml.db.bak_pre_schema_fix  study_runner.py
sivml/.streamlit/: config.toml
sivml/cli/: commands.py
sivml/config/: city_aliases.yaml  company_aliases.yaml  settings.py  study_config.yaml
sivml/dashboard/: app.py  auto_download.py  page_state.py  template_cards.py  theme.py
sivml/database/: models.py  repository.py  session.py
sivml/docs/superpowers/plans/: 2026-07-02-dashboard-nuevo-estudio-cleanup.md
sivml/docs/superpowers/specs/: 2026-06-27-plantillas-scraping-design.md  2026-07-02-dashboard-nuevo-estudio-cleanup-design.md  chat.md
sivml/exports/: excel_exporter.py
sivml/launcher/: Instalar_SIVML.spec  SIVML.spec  instalar_sivml.py  sivml_launcher.py
sivml/processing/: cleaner.py  deduplicator.py  keyword_expansion.py  normalizer.py
sivml/scrapers/: __init__.py  base.py  browser_cleanup.py  bumeran.py  computrabajo.py  indeed.py  jooble.py  laborum.py  linkedin.py  portal_info.py
sivml/tests/: test_auto_download.py  test_base_scraper.py  test_browser_cleanup.py  test_deduplicator.py  test_keyword_expansion.py  test_normalizer.py  test_page_state.py  test_repository.py  test_robustness.py  test_scrapers_unit.py  test_scraping_stop.py  test_search_expanded_terms.py  test_session_migration.py  test_settings.py  test_study_runner.py  test_template_cards.py  test_templates.py  test_theme.py
