[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sivml"
version = "0.1.0"
description = "Sistema Inteligente de Vigilancia del Mercado Laboral"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "sqlalchemy>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "rapidfuzz>=3.9",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "psutil>=6.0",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
